==> beber007/escapement/Escapement/msp430/Escapement_TimerEvent.c <==
#include "Escapement.h"
#include "Escapement_TimerEvent.h"
#define SHIFT_TIME_LIMIT     0x40000000 // = 2^30
#define SHIFT_TIME_LIMIT_16  0x4000     // = 2^30 >> 16

void InsertQueueHelper(INSERTQUEUE_OP *des, SOFTWARE_TIMER_ISR_DATA *device, BOOL genInterrupt)
{
  INT32 scheduledTime;
  TIMER_EVENT_NODE *right, *left = des->Left;
  /* Finish completing the time at which the event takes place. This is done here so that
  ** the timer ISR can correct this time. Because the timer ISR shifts its current time
  ** to avoid overflow, the event occurrence time may not be finalized without the ISR's
  ** awareness. */
  if (OSINT32_LL(&des->Node->Time) == -1) {
     if (des->Version > device->Time) // If 16-bit MSB backup is greater than current a time shift occurred
        scheduledTime = des->Time - SHIFT_TIME_LIMIT;
     else
        scheduledTime = des->Time;
     while (OSINT32_LL(&des->Node->Time) == -1)
        if (OSINT32_SC(&des->Node->Time,scheduledTime))
           break;
  }
  while (TRUE) {         // Loop until done
     right = left->Next; // Get adjacent node
     if (des->Done)      // Has a higher priority task finished the work?
        break;
     else if (right == des->Node) { // Is the node already in the queue?
        des->Done = TRUE;           // Mark that node has been inserted
        break;
     }
     else if (right == NULL || des->Node->Time < right->Time) {
        UINTPTR *successorNode = (UINTPTR *)&des->Node->Next;
        while (OSUINTPTR_LL(successorNode) == (UINTPTR)des)
           if (OSUINTPTR_SC(successorNode,(UINTPTR)right))
              break;
        while (OSUINTPTR_LL((UINTPTR *)&left->Next) == (UINTPTR)right) {
           /* At this point an ABA problem can arise: Say that a task inserts node N
           ** between nodes A and B, and gets preempted. Another task completes the in-
           ** sertion, and then removes N. In this case, node N must not be reinserted.
           ** To correct this flaw, we simply need to check if another task completed the
           ** current insertion. */
           if (des->Done || OSUINTPTR_SC((UINTPTR *)&left->Next,(UINTPTR)des->Node))
              break;
        }
        des->Done = TRUE; // Mark that node has been inserted
        break;
     }
     else
        left = des->Left = right;
  }
  /* Generate a timer comparator interrupt if the inserted event is the first one. */
  if (genInterrupt && device->EventQueue == des->Node) {
     do {
        OSUINT16_LL(device->Compare);
        if (des->GeneratedInterrupt) return;
     } while (!OSUINT16_SC(device->Compare,des->Node->Time));
     if (*device->Compare <= *device->Counter)
        *device->PortIFG |= device->PortPinBit;
  }
  des->GeneratedInterrupt = TRUE;
}

void TimerIntHandler(TIMER_ISR_DATA *device)
{
  *device->InterruptFlag = TRUE;                   // Save the state
  *device->PortIFG |= device->PortPinBit;          // Generate software interrupt
  *device->TimerControl |= device->TimerEnableBit; // Re-enable timer interrupt
}
